# pykhoa

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: debug-fixtures.md  openapi-catalog.md  repeated-mistakes.md  testing.md
examples/: streamlit_debug_ui.py
pykhoa/: __init__.py  _convert.py  _http.py  client.py  exceptions.py  models.py  observatories.py  services.py
src/khoa/: __init__.py  _convert.py  _http.py  client.py  debug.py  exceptions.py  keys.py  models.py  observatories.py  services.py
tests/: conftest.py  runners.py  test_client.py  test_debug.py  test_generated_fixtures.py  test_http.py  test_live.py  test_observatories.py  test_services.py  utils.py
tests/fixtures/roms/: roms_basic.json
