[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-khoa-api"
version = "0.1.0"
description = "Unofficial Python client for KHOA ODMI OpenAPI services."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "digitie"}
]
keywords = ["khoa", "ocean", "odmi", "data.go.kr", "korea"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "python-kraddr-base @ git+https://github.com/digitie/python-kraddr-base.git@fada7569b5f077a26b5a491111baf028e36d5e08",
  "requests>=2.31",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "responses>=0.25",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["khoa*"]

[tool.setuptools.package-data]
khoa = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "../python-kraddr-base/src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
  "live: tests that call the real KHOA ODMI services and require KHOA_SERVICE_KEY",
]
